<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/alertsFragment"
        android:name="com.example.weatherapp.Alerts.AlertsFragment"
        android:label="@string/alerts"
        tools:layout="@layout/fragment_alerts" />
    <fragment
        android:id="@+id/favouritsFragment"
        android:name="com.example.weatherapp.Favourites.FavouritesFragment"
        android:label="@string/favourites"
        tools:layout="@layout/fragment_favourits" >
        <action
            android:id="@+id/action_favouritsFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.weatherapp.Home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.weatherapp.Settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>