<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/soft_blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/settings"
        android:textColor="@color/sky_blue_dark"
        android:textSize="28sp"
        android:textStyle="bold" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:elevation="4dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/location"
                android:textColor="@color/dark_grey"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/locationGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/gpsOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/sky_blue_light"
                    android:text="@string/gps"
                    android:textColor="@color/dark_grey" />

                <RadioButton
                    android:id="@+id/mapOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/sky_blue_light"
                    android:text="@string/map"
                    android:textColor="@color/dark_grey" />
            </RadioGroup>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:elevation="4dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/language"
                android:textColor="@color/dark_grey"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/languageGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/arabicOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/sky_blue_light"
                    android:text="@string/arabic"
                    android:textColor="@color/dark_grey" />

                <RadioButton
                    android:id="@+id/englishOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/sky_blue_light"
                    android:text="@string/english"
                    android:textColor="@color/dark_grey" />
            </RadioGroup>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:elevation="4dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/units"
                android:textColor="@color/dark_grey"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/unitGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/mscelsiusOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/sky_blue_light"
                    android:text="@string/meters_per_second_m_s_celsius"
                    android:textColor="@color/dark_grey" />

                <RadioButton
                    android:id="@+id/mphcelsiusOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/sky_blue_light"
                    android:text="@string/miles_per_hour_mph_celsius"
                    android:textColor="@color/dark_grey" />

                <RadioButton
                    android:id="@+id/mskelvinOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/sky_blue_light"
                    android:text="@string/meters_per_second_m_s_kelvin"
                    android:textColor="@color/dark_grey" />
            </RadioGroup>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/notifications"
                android:textColor="@color/dark_grey"
                android:textSize="20sp"
                android:textStyle="bold" />


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/notificationSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:switchPadding="8dp"
                android:text="@string/enable_notifications"
                android:textColor="@color/dark_grey"
                android:theme="@style/SwitchTheme" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
