<?xml version="1.0" encoding="utf-8"?>
<!-- dialog_weather_alert.xml -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date" />

        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time" />

        <TimePicker
            android:id="@+id/start_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner" />


        <RadioGroup
            android:id="@+id/alert_type_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert"/>

            <RadioButton
                android:id="@+id/radio_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification"/>

        </RadioGroup>
    </LinearLayout>

</ScrollView>
